# ProjectRaksha

./: CMakeLists.txt  README.md  package.xml
config/: laser_turret.yaml
launch/: raksha.launch  sky.launch
models/particle_sphere/: model.sdf
raksha/: CMakeLists.txt
raksha/config/: laser_turret.yaml
raksha/launch/: sky.launch
raksha/scripts/: Laser_teleop.py
raksha/urdf/: laser_turret.xacro
raksha/worlds/: sky.world
scripts/: Laser_teleop.py  analysis.py  create_dataset.py  dataset.npy  demo.py  main.py  test.py  trigger.py
src/: counterAttack.cpp  depthSensor.cpp  pointCloud.cpp
urdf/: laser_turret.xacro  materials.xacro  servo.gazebo
worlds/: raksha.world  sky.world
